apps/60-services/sakapuss/overlays/prod/backend-node-affinity.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sakapuss-backend
spec:
  template:
    spec: {}
